--- a/index.html
+++ b/index.html
@@ -4,67 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <style>
-      body {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .calculator {
-        width: 700px;
-        height: 500px;
-        border: 1px solid black;
-        padding: 10px;
-      }
-      .container {
-        width: 100%;
-        height: calc(100% - 100px);
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        gap: 10px;
-        margin-bottom: 10px;
-      }
-      .box {
-        color: black;
-        background-color: aqua;
-        border: none;
-        font-size: 20px;
-        border-radius: 1.5rem;
-      }
-      .input {
-        width: 100%;
-        height: 80px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-
-      .cancel {
-        width: 25%;
-        height: 80px;
-        border-radius: 1.5rem;
-        border: none;
-        outline: none;
-        background-color: aqua;
-        font-size: 20px;
-      }
-
-      input {
-        width: calc(80% - 80px);
-        height: calc(100% - 20px);
-        border-radius: 1.5rem;
-        text-align: right;
-        padding: 10px;
-        font-size: 30px;
-        border: none;
-        outline: none;
-        background-color: beige;
-      }
-    </style>
+    <link rel="stylesheet" href="/CSS/calculator.css">
   </head>
   <body>
     <div class="calculator">
