--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="input">
         <button id="AC" class="cancel">AC</button>
         <!-- <label for="Text"></label> -->
-        <input type="text" id="Num" placeholder="Inputnumber" />
+        <input type="text" id="Num" placeholder="" />
       </div>
       <div class="container">
         <button id="7" class="box">7</button>
